@@ -1,0 +1,9 @@
+.mega-select {
+  min-width: 15rem;
+}
+nz-input-number {
+  max-width: 5rem;
+}
+.add-btn {
+  width: 60%;
+}
