@@ -1,3 +1,8 @@
 nz-card {
   margin-top: 5px;
 }
+@media only screen and (min-width: 400px) {
+  .auto-mega {
+    min-width: 400px;
+  }
+}
