@@ -149,7 +149,7 @@ export const ALLOY_BUILDING_PRICE = 1e4;
 
 //  Megastructures
 export const MEGA_PRICE_MULTI = 1e3;
-export const MEGA_WORKER_MULTI = 0.3;
+export const MEGA_WORKER_MULTI = 0.4;
 export const MEGA_EFF_MULTI = 0.1;
 export const MEGA_NAVAL_MULTI = 0.2;
 export const MEGA_SPEED_MULTI = 0.3;
